[package]
name = "jvm-rs"
version = "0.1.0"
description = "JVM implemented in Rust, with an emphasis on performance and safety."
homepage = "https://github.com/shymega/jvm-rs"
repository = "https://github.com/shymega/jvm-rs.git"
keywords = ["jvm", "rust"]
readme= "README.md"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]

[lib]
name = "jvmrs"
path = "src/lib.rs"

[[bin]]
name = "jvm-rs"
path = "src/bin/jvm-rs.rs"

[features]
default=[]

[dependencies]
log = "0.3.6"

[dependencies.log4rs]
version = "*"
features = ["toml", "yaml"]

[dependencies.clap]
version = "2"
features = [ "suggestions", "color", "wrap_help"]
