[package]
name = "jvm"
version = "0.1.0"
license = "gpl-3.0"
description = "JVM implemented in Rust, with an emphasis on performance and safety."
homepage = "https://github.com/shymega/jvm-rs"
repository = "https://github.com/shymega/jvm-rs.git"
keywords = ["jvm", "rust"]
readme= "README.md"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]

[lib]
name = "jvm"
path = "src/lib.rs"

[[bin]]
name = "jvm"
path = "src/bin/jvm-rs.rs"

[features]
default=[]

[dependencies]
log = "0.3.6"

[dependencies.log4rs]
version = "0.5.0"

[dependencies.clap]
version = "2.14.0"
features = [ "suggestions", "color", "wrap_help"]
