[package]
name = "jvm-rs-classfile-parser"
version = "0.1.0"
license = "apache-2.0"
description = "Classfile parser implemented in Rust."
homepage = "https://github.com/shymega/jvm-rs"
repository = "https://github.com/shymega/jvm-rs.git"
keywords = ["jvm", "rust"]
readme= "README.md"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]

[lib]
name = "jvm_rs_classfile_parser"
path = "src/lib.rs"

[features]
default = []

[dependencies]
bitflags = "0.5"
byteorder = "0.5"